--- a/IQuad2/Views/Appointment/Index.cshtml
+++ b/IQuad2/Views/Appointment/Index.cshtml
@@ -26,19 +26,19 @@
         <tbody>
             @foreach (var appointment in Model)
             {
-                <tr>
+            <tr>
 
-                    <td>@Html.ActionLink("<==>", "Edit", "Appointment", new { id = appointment.Id }, null) </td>
+                <td><a href=@Url.Action("Edit", "Appointment", new { id = appointment.Id }, null)><span class="glyphicon glyphicon-edit"></span></a> </td>
 
-                    <td>@appointment.Patient.Fname @appointment.Patient.Lname</td>
-                    <td>@appointment.PurposeOfVisit</td>
-                    <td>@appointment.Doctor.Fname @appointment.Doctor.Lname</td>
-                    <td>@appointment.Date.ToLongDateString()</td>
-                    <td>@appointment.StartTime.ToLongTimeString()</td>
-                    <td>@appointment.EndTime.ToLongTimeString()</td>
-                    <td>@Html.ActionLink("<==>", "Delete", "Appointment", new { id = appointment.Id }, null) </td>
+                <td>@appointment.Patient.Fname @appointment.Patient.Lname</td>
+                <td>@appointment.PurposeOfVisit</td>
+                <td>@appointment.Doctor.Fname @appointment.Doctor.Lname</td>
+                <td>@appointment.Date.ToLongDateString()</td>
+                <td>@appointment.StartTime.ToLongTimeString()</td>
+                <td>@appointment.EndTime.ToLongTimeString()</td>
+                <td><a href=@Url.Action("Delete", "Appointment", new { id = appointment.Id }, null)><span class='glyphicon glyphicon-trash'></span></a> </td>
 
-                </tr>
+            </tr>
             }
 
         </tbody>
