--- a/IQuad2/Views/User/Index.cshtml
+++ b/IQuad2/Views/User/Index.cshtml
@@ -8,14 +8,14 @@
 <h2>Users</h2>
 
 <div class="bk">
-    <table id="user" class="table table-bordered table-hover">
+    <table id="user" class="table table-bordered table-hover ">
         <thead>
 
-            <tr class="bkg">
+            <tr>
 
-                <th>First Name</th>
-                <th>Last Name</th>
-                <th>User Type</th>
+                <th><h4>First Name</h4> </th>
+                <th><h4>Last Name</h4></th>
+                <th><h4>User Type</h4></th>
 
 
             </tr>
