--- a/IQuad2/Content/Site.css
+++ b/IQuad2/Content/Site.css
@@ -33,9 +33,22 @@ textarea {
 }
 
 .bk{
-    background-color:#222222;
+    background-color:#2A363B;
    
 }
+.bk table tbody tr:hover{
+    background-color:#7A6FBE;
+
+}
+    .bk table thead tr th {
+        color: #7ECC78;
+        font-weight: bold;
+        font-size:2
+    }
+    .bk table tbody tr td,
+    .bk table tbody tr td a {
+        color:white;
+    }
 
 .bkg{
     text-decoration-color:white;
