--- a/IQuad2/Views/Home/Contact.cshtml
+++ b/IQuad2/Views/Home/Contact.cshtml
@@ -11,7 +11,7 @@
 
                 <div class="carousel-inner" style="float:none; ">
                     <div class=" item active">
-                        <img src="~/Pictures/contactus.png" />
+                        <img style="width:1170px" src="~/Pictures/contactus.png" />
 
                     </div>
                 </div>
