--- a/IQuad2/Views/Appointment/Index.cshtml
+++ b/IQuad2/Views/Appointment/Index.cshtml
@@ -12,14 +12,14 @@
         <thead>
 
             <tr>
-                <th>Edit</th>
-                <th>Patient Name</th>
-                <th>Purpose Of Visit</th>
-                <th>Doctor Name</th>
-                <th>Date</th>
-                <th>Start Time </th>
-                <th>End Time</th>
-                <th>Delete</th>
+                <th><h5>Edit</h5></th>
+                <th><h5>Patient Name</h5></th>
+                <th><h5>Purpose Of Visit</h5></th>
+                <th><h5>Doctor Name</h5></th>
+                <th><h5>Date</h5></th>
+                <th><h5>Start Time</h5></th>
+                <th><h5>End Time</h5></th>
+                <th><h5>Delete</h5></th>
 
             </tr>
         </thead>
