--- a/IQuad2/Views/Appointment/ReadIndex.cshtml
+++ b/IQuad2/Views/Appointment/ReadIndex.cshtml
@@ -7,18 +7,18 @@
 
 <h2>Appointments</h2>
 <div class="bk">
-    <table id="appointment" class="table table-bordered table-hover bkg">
+    <table id="appointment" class="table table-bordered table-hover">
         <thead>
 
             <tr>
 
 
-                <th>Patient Name</th>
-                <th>Purpose Of Visit</th>
-                <th>Doctor Name</th>
-                <th>Date</th>
-                <th>Start Time </th>
-                <th>End Time</th>
+                <th><h5>Patient Name</h5></th>
+                <th><h5>Purpose Of Visit</h5></th>
+                <th><h5>Doctor Name</h5></th>
+                <th><h5>Date</h5></th>
+                <th><h5>Start Time</h5></th>
+                <th><h5>End Time</h5></th>
 
             </tr>
         </thead>
