--- a/IQuad2/Views/Shared/_Header.cshtml
+++ b/IQuad2/Views/Shared/_Header.cshtml
@@ -131,7 +131,7 @@
 
 
                 <li>
-                    <a href="@Url.Action("Calendar","Dashboard")" class="waves-effect"><i class="mdi mdi-calendar-check"></i><span> Add Roles </span></a>
+                    <a href="@Url.Action("Index","Roles")" class="waves-effect"><i class="mdi mdi-calendar-check"></i><span> Add Roles </span></a>
                 </li>
 
 
