--- a/IQuad2/Views/Roles/Index.cshtml
+++ b/IQuad2/Views/Roles/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     ViewBag.Title = "ManageUserRoles";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
 <div class="row col-sm-12 col-lg-12 col-md-12">
