--- a/IQuad2/Views/Shared/_Header.cshtml
+++ b/IQuad2/Views/Shared/_Header.cshtml
@@ -109,29 +109,17 @@
             <ul class="metismenu" id="side-menu">
                 <li class="menu-title">Main</li>
                 <li>
-                    <a href="/" class="waves-effect">
+                    <a href="@Url.Action("Index","Admin")" class="waves-effect">
                         <i class="mdi mdi-view-dashboard"></i><span class="badge badge-primary badge-pill float-right">2</span> <span> Dashboard </span>
                     </a>
                 </li>
-
-
-
-                <li>
-                    <a href="/" class="waves-effect">
-                        <i class="mdi mdi-view-dashboard"></i><span class="badge badge-primary badge-pill float-right">3</span> <span> Doctors </span>
-                    </a>
-
-                </li>
-
 
                 <li>
                     <a href="@Url.Action("Calendar","Dashboard")" class="waves-effect"><i class="mdi mdi-calendar-check"></i><span> Calendar </span></a>
                 </li>
 
-
-
                 <li>
-                    <a href="@Url.Action("Index","Roles")" class="waves-effect"><i class="mdi mdi-calendar-check"></i><span> Add Roles </span></a>
+                    <a href="@Url.Action("Index","Roles")" class="waves-effect"><i class="mdi mdi-calendar-check"></i><span> Manage User and Roles </span></a>
                 </li>
 
 
