--- a/IQuad2/Views/Appointment/Appointment_Set.cshtml
+++ b/IQuad2/Views/Appointment/Appointment_Set.cshtml
@@ -4,31 +4,34 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-    <div class="container" style="float:none; width:1170px">
-        <div>
+<div class="container" style="float:none; width:1170px">
+    <div>
 
-            <div id="carousel " class="carousel slide">
-                <ol class="carousel-indicators">
-                </ol>
+        <div id="carousel " class="carousel slide">
+            <ol class="carousel-indicators">
+            </ol>
 
-                <div class="carousel-inner" style="float:none; ">
-                    <div class=" item active">
-                        <img style="height:300px; width:1170px" src="~/Pictures/appointment.jpg" />
+            <div class="carousel-inner" style="float:none; ">
+                <div class=" item active">
+                    <img style="height:300px; width:1170px" src="~/Pictures/appointment.jpg" />
 
-                    </div>
                 </div>
             </div>
         </div>
     </div>
+</div>
+
+<br />
+<br />
+<p style="font-size:large">
+    Thank you for setting an appointment using the I-Quad Medical Appointment System.
+    Your appointment has been updated.
+</p>
 
 
-<p> Thank you for setting an appointment using the I-Quad Medical Appointment System.
-    Your appointment has been updated.</p>
 
 
-
-
-
+<br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
 
 
 
