--- a/IQuad2/Views/Home/About.cshtml
+++ b/IQuad2/Views/Home/About.cshtml
@@ -7,7 +7,6 @@
 
     <div id="carousel " class="carousel slide">
         <ol class="carousel-indicators">
-
         </ol>
 
         <div class="carousel-inner">
@@ -21,17 +20,21 @@
 
 
 </div>
+<br /><br /><br />
 
 <div style="text-align:center;">
     <h2 style="color:black">I-QUAD THE TEAM OF EXCELLENCE</h2>
 </div>
 
 <br />
+<br />
+<br />
+<br />
 
 <div style="text-align:center;">
     <h2 style="color:black;"> About I-Quad Team</h2>
 
-    <p>
+    <p style="font-size:medium ">
         I-Quad is a developing team comprising of four specialized members from the Northern Caribbean University.
         It includes Johnoy Mendez (Database Admin), Hakeem Gooden (Network Engineer), Raheem Robinson (Web Developer) and
         Berthel Whyte (Network Admin/Entrepreneur). We strive to create or develope the most innovating products and services to
@@ -46,11 +49,12 @@
 <div style="text-align:center;">
     <h2 style="color:black"> About I-Quad Medical Appointment System</h2>
 
-    <p>
+    <p style="font-size:medium ">
         I-Quad Medical Appointment system is a web application based in Jamaica that can be used on all platforms.
         We give doctors office the ability to provide an appointment system that is easy to use and enable patients to make
         appointments anywhere at any time.
     </p>
     <br />
     <br />
+    <br /><br /><br /><br /><br /><br />
 </div>
