--- a/IQuad2/Views/Home/Index.cshtml
+++ b/IQuad2/Views/Home/Index.cshtml
@@ -76,7 +76,7 @@
                     <img src="~/Pictures/icon3_0004_.jpg" alt="Image Placeholder" class="img-fluid">
                     <div class="media-body">
                         <h3 class="mt-0 text-black">Ophthalmology</h3>
-                        <p>Ophthalmology is the branch of medicine that deals with the anatomy, physiology and diseases of the eye. All evaluations that purport to diagnose eye disease should be carried out by a physician. ... Since ophthalmologists perform operations on eyes, they are considered to be both surgical and medical specialists.</p>
+                        <p>Ophthalmology is the branch of medicine that deals with the anatomy, physiology and diseases of the eye. All evaluations that purport to diagnose eye disease should be carried out by a physician. Since ophthalmologists perform operations on eyes, they are considered to be both surgical and medical specialists.</p>
                     </div>
                 </div>
             </div>
@@ -89,7 +89,7 @@
                 <img src="~/pictures/icon3_0005_.jpg" alt="Image Placeholder" class="img-fluid">
                 <div class="media-body">
                     <h3 class="mt-0 text-black">Cardiology</h3>
-                    <p>Cardiology is the study and treatment of disorders of the heart and the blood vessels. A person with heart disease or cardiovascular disease may be referred to a cardiologist. Cardiology is a branch of internal medicine. ... A cardiologist specializes in diagnosing and treating diseases of the cardiovascular system.</p>
+                    <p>Cardiology is the study and treatment of disorders of the heart and the blood vessels. A person with heart disease or cardiovascular disease may be referred to a cardiologist. Cardiology is a branch of internal medicine. A cardiologist specializes in diagnosing and treating diseases of the cardiovascular system.</p>
                 </div>
             </div>
         </div>
