--- a/IQuad2/Views/Appointment/Appointment_Set.cshtml
+++ b/IQuad2/Views/Appointment/Appointment_Set.cshtml
@@ -23,15 +23,15 @@
 
 <br />
 <br />
-<p style="font-size:large">
+<p style="font-size:19px; text-align:center; font-weight:bold;">
     Thank you for setting an appointment using the I-Quad Medical Appointment System.
-    Your appointment has been updated.
+    Your appointment has been updated!
 </p>
 
 
 
 
-<br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+<br /><br /><br /><br /><br />
 
 
 
