--- a/IQuad2/Views/Home/Index.cshtml
+++ b/IQuad2/Views/Home/Index.cshtml
@@ -180,7 +180,7 @@
                 <div class="col-inner p-xl-5 p-lg-5 p-md-4 p-sm-4 p-4">
                     <img src="~/pictures/doc22.png" alt="Image Placeholder" class="img-fluid">
                     <div class="media-body">
-                        <h3 class="mt-0 text-black" style="font-size:19px;"><b>Dr. Carl Smith</b></h3>
+                        <h3 class="mt-0 text-black" style="font-size:19px;"><b>Dr. Andrew Bowen</b></h3>
                         <p>Radiologist, M.B.Ch.B.</p>
                     </div>
                 </div>
@@ -207,7 +207,7 @@
             <div class="col-inner p-xl-5 p-lg-5 p-md-4 p-sm-4 p-4">
                 <img src="~/pictures/doc33.png" alt="Image Placeholder" class="img-fluid">
                 <div class="media-body">
-                    <h3 class="mt-0 text-black" style="font-size:19px;"><b>Dr. James Brady</b></h3>
+                    <h3 class="mt-0 text-black" style="font-size:19px;"><b>Dr. James Brown</b></h3>
                     <p> Cardiologist, B.Sc., M.D., CCFP</p>
                 </div>
             </div>
@@ -247,7 +247,7 @@
 
                 <div class="col-lg-12 d-flex flex-column">
               
-                    <div class="btn btn-primary">@Html.ActionLink("Set an Appointment", "Set_Appointment", "Appointment") </div>
+                    <div class="btn btn-primary appt">@Html.ActionLink("Set an Appointment", "Set_Appointment", "Appointment") </div>
                   
                     <br />
                     <div class="alert-msg"></div>
