--- a/IQuad2/Views/Manage/ChangePassword.cshtml
+++ b/IQuad2/Views/Manage/ChangePassword.cshtml
@@ -3,13 +3,14 @@
     ViewBag.Title = "Change Password";
 }
 
-<h2>@ViewBag.Title.</h2>
+
 
 <div class="bg">
+    <h2 style="margin-left:10px;">@ViewBag.Title.</h2>
     @using (Html.BeginForm("ChangePassword", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
     {
         @Html.AntiForgeryToken()
-        <h4>Change Password Form</h4>
+        <h4 style="margin-left:10px;">Change Password Form</h4>
         <br />
         @Html.ValidationSummary("", new { @class = "text-danger" })
         <div class="form-group">
