--- a/IQuad2/Views/Shared/_Breadcrumb.cshtml
+++ b/IQuad2/Views/Shared/_Breadcrumb.cshtml
@@ -15,7 +15,7 @@
     <h4 class="page-title">Dashboard</h4>
     <ol class="breadcrumb">
         <li class="breadcrumb-item active">
-            Welcome to Lexa Dashboard
+            Welcome to I-Quad Dashboard
         </li>
     </ol>
 }
