--- a/IQuad2/Views/Shared/_Footer.cshtml
+++ b/IQuad2/Views/Shared/_Footer.cshtml
@@ -1,6 +1,4 @@
 ﻿<footer class="footer">
-    © 2018 Lexa - <span class="d-none d-sm-inline-block"> Crafted with <i class="mdi mdi-heart text-danger"></i> by Themesbrand</span>.
-    
-        <a href="@Url.Action("Index","Home")" class="waves-effect"><i class="mdi mdi-calendar-check"></i><span> Back Home </span></a>
+    <p>© 2019 - I-Quad Medical Appointment System | All rights reserved.</p><a href="@Url.Action("Index","Home")" class="waves-effect"><i class="glyphicon glyphicon-home"></i><span> Back Home </span></a>
    
 </footer>
