--- a/IQuad2/Views/Account/Login.cshtml
+++ b/IQuad2/Views/Account/Login.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Log in";
 }
 
-<h2>@ViewBag.Title.</h2>
+
 <div class="bg">
     <div class="row">
         <div class="col-md-8">
@@ -13,7 +13,8 @@
                 {
                     @Html.AntiForgeryToken()
                     <br />
-                    <h4>Use a local account to log in.</h4>
+                    <h2 style="margin-left:10px;">@ViewBag.Title.</h2>
+                    <h4 style="margin-left:10px;">Use a local account to log in.</h4>
                     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                     <div class="form-group">
                         @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
@@ -42,7 +43,7 @@
                             <input type="submit" value="Log in" class="btn btn-default" />
                         </div>
                     </div>
-                    <p>
+                    <p style="margin-left:10px;">
                         @Html.ActionLink("Register as a new user", "Register")
                     </p>
                     @* Enable this once you have account confirmation enabled for password reset functionality
@@ -56,7 +57,6 @@
             </section>
         </div>
     </div>
-    <br /><br /><br /><br /><br /><br /><br /><br /><br />
 </div>
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
