--- a/IQuad2/Views/Appointment/ReadIndex.cshtml
+++ b/IQuad2/Views/Appointment/ReadIndex.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Appointments</h2>
+<h2>All Appointments</h2>
 <div class="bk">
     <table id="appointment" class="table table-bordered table-hover">
         <thead>
