--- a/IQuad2/Views/Manage/Index.cshtml
+++ b/IQuad2/Views/Manage/Index.cshtml
@@ -3,14 +3,14 @@
     ViewBag.Title = "Manage";
 }
 
-<h2>@ViewBag.Title.</h2>
+
 
 <p class="text-success">@ViewBag.StatusMessage</p>
 <div class="bg">
 
-
+    <h2 style="margin-left:10px;">@ViewBag.Title.</h2>
     <div>
-        <h4>Change your account settings</h4>
+        <h4 style="margin-left:10px;">Change your account settings</h4>
         <br />
         <dl class="dl-horizontal">
             <dt>Password:</dt>
@@ -25,11 +25,6 @@
                     @Html.ActionLink("Create", "SetPassword")
                 }
                 ]
-            </dd>
-            <dt>External Logins:</dt>
-            <dd>
-                @Model.Logins.Count [
-                @Html.ActionLink("Manage", "ManageLogins") ]
             </dd>
             <br />
             @*
@@ -88,6 +83,9 @@
                     }*@
             </dd>
             <br />
+            <br />
+            <br />
+            <br /><br /><br /><br /><br />
         </dl>
     </div>
 </div>
