--- a/IQuad2/Views/Shared/_LayoutAdmin.cshtml
+++ b/IQuad2/Views/Shared/_LayoutAdmin.cshtml
@@ -4,6 +4,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - My ASP.NET Application</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
@@ -17,14 +20,7 @@
             <!-- Start content -->
             <div class="content">
                 <div class="container-fluid">
-                    <div class="row">
-                        <div class="col-sm-12">
-                            <div class="page-title-box">
-                                @Html.Partial("_BreadCrumb")
-                         
-                            </div>
-                        </div>
-                    </div>
+                    
                     <!-- end row -->
 
                     @RenderBody()
