--- a/IQuad2/Views/Home/Index.cshtml
+++ b/IQuad2/Views/Home/Index.cshtml
@@ -284,17 +284,17 @@
                 <h3><b>Ask a question</b></h3>                <p>Feel free to ask any question and we will contact you to clear up the details.    </p>
 
                 <div class="col-lg-12 d-flex flex-column">
-                    <input style="border-color:black;" name="patient-name" placeholder="Full Name" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Name'" class="form-control mt-20" required="" type="text">
+                    <input style="border-color:black;" name="patient-name" placeholder="Full Name" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Name'" class="form-control mt-20"  type="text" required>
                 </div>
 
                 <div class="col-lg-6 d-flex flex-column">
                     <br />
-                    <input style="border-color:black;" name="email" placeholder="Email address" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Email address'" class="form-control mt-20" required="" type="email">
+                    <input style="border-color:black;" name="email" placeholder="Email address" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Email address'" class="form-control mt-20"  type="email" required>
                 </div>
 
                 <div class="col-lg-12 flex-column">
                     <br />
-                    <textarea style="border-color:black;" rows="5" class="form-control mt-20" name="message" placeholder="Messege" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Messege'" required=""></textarea>
+                    <textarea style="border-color:black;" rows="5" class="form-control mt-20" name="message" placeholder="Messege" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Messege'" required></textarea>
                     <br />
                 </div>
 
